--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -3,6 +3,7 @@
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss'; // Bootstrap Reboot collection
 @import 'node_modules/slick-carousel/slick/slick.scss';
 @import 'node_modules/slick-carousel/slick/slick-theme.scss';
+@import '../../node_modules/magnific-popup/dist/magnific-popup.css';
 //@import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss'; // Bootstrap Breakpoints mixin
 // @import 'node_modules/bootstrap/scss/bootstrap-grid.scss'; // Optional Bootstrap Grid
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss'; // Optional Bootstrap Utilites
@@ -46,10 +47,8 @@ $hover-shadow: 0px 0px 9.75px 10.25px rgba(255, 197, 0, 0.35);
 	color: #fff;
 }
 
-input, textarea {
-	outline: none;
-	&:focus:required:invalid { border-color: red }
-	&:required:valid { border-color: green }
+input, textarea, button {
+	outline: none !important;
 }
 
 body {
