--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -17,7 +17,6 @@ a {
 	z-index: 2;
 	transition: all 0.3s;
 	box-shadow: 0px 3px 0px #ff9600;
-	// box-shadow: 0px 0px 9.75px 3.25px rgba(255, 197, 0, 0.65);
 	&.scroll {
 		padding: 10px 0;
 	}
@@ -85,7 +84,7 @@ a {
 .main {
 	background: url(../images/dest/main-bg.jpg) center no-repeat;
 	background-size: cover;
-	padding-top: 235px;
+	padding-top: 170px;
 	padding-bottom: 120px;
 	overflow: hidden;
 	.container {
@@ -173,7 +172,7 @@ a {
 	}
 	&__author {
 		position: absolute;
-		top: -265px;
+		top: -230px;
 		left: -390px;
 	}
 	&__text {
@@ -238,6 +237,62 @@ a {
 			box-shadow: 0px 2px 0px #ff9600;
 		}
 	}
+}
+
+// ? Slider
+.slick-dots {
+	button:before {
+		font-size: 55px !important;
+		color: #fff !important;
+	}
+	button:hover::before {
+		color: $accent !important;
+	}
+}
+.slick-dots .slick-active {
+	button:before {
+		color: $accent !important;
+	}
+}
+.slick-active {
+	opacity: 1 !important;
+	transition: all 0.5s ease-in-out;
+	img {
+		opacity: 0.1 !important;
+		transition: all 0.5s ease-in-out;
+	}
+}
+.slick-center {
+	transition: all 0.5s ease-in-out;
+	img {
+		opacity: 1 !important;
+		z-index: 2;
+	}
+}
+.slick-next,
+.slick-prev {
+	width: 87px;
+	height: 87px;
+	z-index: 1;
+	top: 50%;
+}
+.slick-next {
+	right: 70px;
+}
+.slick-prev {
+	left: 70px;
+}
+.slick-next:before,
+.slick-next:before,
+.slick-prev:before {
+	content: "";
+	display: block;
+	width: 87px;
+	height: 87px;
+	background: url(../images/dest/arrow.png) center no-repeat;
+}
+.slick-prev:before {
+	transform: rotate(180deg);
 }
 
 //? Problem
@@ -346,9 +401,24 @@ a {
 	}
 }
 
+// ? education
+.education {
+	padding: 40px 0;
+	padding-bottom: 100px;
+	background: url(../images/dest/now2-bg.png) center no-repeat;
+	background-size: cover;
+	&__slider {
+		margin-top: 60px;
+		.slick-dots {
+			bottom: -70px;
+		}
+	}
+}
+
 // ? Benefits
 .benefits {
-	padding: 120px 0;
+	padding-top: 40px;
+	padding-bottom: 140px;
 	background: url(../images/dest/now2-bg.png) center no-repeat;
 	background-size: cover;
 	&__content {
@@ -377,9 +447,40 @@ a {
 	}
 }
 
+// ? Stat
+.stat {
+	margin-top: -40px;
+	padding: 60px 0;
+	padding-bottom: 0;
+	background: url(../images/dest/stat-bg.png) center;
+	background-size: cover;
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__content {
+		margin-left: 100px;
+	}
+	.popup-gallery {
+		margin-top: 40px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.popup__prev {
+		margin: 5px;
+		opacity: 0.8;
+		transition: all 0.1s;
+		&:hover {
+			opacity: 1;
+		}
+	}
+}
+
 // ? Rate
 .rate {
-	padding: 120px 0;
+	padding-top: 40px;
+	padding-bottom: 40px;
 	background: url(../images/dest/rate-bg.png) center no-repeat;
 	background-size: cover;
 	.heading {
@@ -440,16 +541,16 @@ a {
 					}
 				}
 				.radio__label::before {
-					content: '';
+					content: "";
 					display: block;
-					min-width:16px;
+					min-width: 16px;
 					height: 16px;
 					background-color: #fff;
 					border-radius: 4px;
 					margin-right: 5px;
 				}
 				.radio__label::after {
-					content: '';
+					content: "";
 					width: 12px;
 					height: 12px;
 					background-color: $accent;
@@ -458,8 +559,7 @@ a {
 					top: 4px;
 					left: 2px;
 					transform: scale(0);
-					transition: all .1s;
-
+					transition: all 0.1s;
 				}
 			}
 			&--margin {
@@ -509,7 +609,7 @@ a {
 		color: $accent;
 		font-size: 16px;
 		margin-left: 5px;
-		transition: all .2s;
+		transition: all 0.2s;
 		font-weight: 700;
 		cursor: pointer;
 		position: relative;
@@ -542,17 +642,97 @@ a {
 	}
 }
 
+// ? FAQ
+.faq {
+	padding-bottom: 120px;
+	background: url(../images/dest/now2-bg.png) center no-repeat;
+	background-size: cover;
+	.accordion {
+		margin-top: 40px;
+		.panel {
+			background-color: #121212;
+			margin-bottom: 15px;
+			border-radius: 10px;
+			box-shadow: 1.813px 1.827px 37.15px 25.85px #000;
+			&__title {
+				background-color: #121212;
+				border-radius: 10px;
+				padding: 18px 0 18px 20px;
+				cursor: pointer;
+				display: flex;
+				align-items: center;
+				position: relative;
+				justify-content: space-between;
+				a {
+					font-size: 18px;
+					font-weight: 700;
+					color: $textcolor;
+					&:hover {
+						text-decoration: none;
+					}
+				}
+				&::after {
+					content: "";
+					min-width: 10px;
+					min-height: 10px;
+					display: inline-block;
+					margin-right: 18px;
+					display: inline-block;
+					background: url(../images/dest/open-faq.png) center no-repeat;
+					transition: all 0.3s ease-in-out;
+					background-size: cover;
+				}
+				&.in {
+					&::after {
+						transform: rotate(180deg);
+					}
+				}
+			}
+			&__collapse {
+				display: none;
+				padding: 18px;
+				padding-top: 0;
+				ul {
+					line-height: 21px;
+					list-style: none;
+					font-size: 15px;
+					list-style: square outside;
+					color: #2b8fe4;
+					padding-bottom: 20px;
+					li {
+						padding-left: 5px;
+						margin-bottom: 16px;
+					}
+					li:last-child {
+						margin-bottom: 0;
+					}
+				}
+				p {
+					text-align: left;
+					padding-top: 0;
+				}
+			}
+		}
+	}
+}
+/* FAQ END*/
+
 // ? Form
 .form * {
 	outline: none !important;
 }
 .form {
 	position: relative;
-	padding: 120px 0;
-	padding-top: 0;
-	background: url(../images/dest/form-bg.png) center no-repeat;
-	background-size: cover;
+	padding: 60px 0;
+	padding-bottom: 0;
 	overflow: hidden;
+	&__wrapper {
+		display: flex;
+		align-items: center;
+		.form__image {
+			max-width: 500px;
+		}
+	}
 	&__content {
 		margin-top: 70px;
 		background-color: rgb(18, 18, 18);
@@ -646,12 +826,6 @@ a {
 		width: 100%;
 		border: none;
 		outline: none;
-	}
-	&__author {
-		position: absolute;
-		left: 55%;
-		bottom: 0;
-		z-index: 0;
 	}
 	// Select Style
 	.select {
@@ -763,7 +937,8 @@ a {
 
 // ? Reviews
 .reviews {
-	padding: 120px 0;
+	padding-top: 60px;
+	padding-bottom: 60px;
 	background: url(../images/dest/reviews-bg.png) center no-repeat;
 	background-size: cover;
 	&__content {
@@ -771,143 +946,33 @@ a {
 		margin: 0 auto;
 		margin-top: 60px;
 		// width: 870px;
+		.slick-slide {
+			display: flex !important;
+			justify-content: center !important;
+			width: 215px !important;
+			opacity: 0;
+			transition: all 0.5s ease-in-out;
+			img {
+				opacity: 0.1;
+			}
+		}
+		.slick-dots {
+			bottom: 40px;
+		}
 	}
 	&__item {
 		width: 290px !important;
-		height: 500px;
+		height: 624px !important;
 		display: flex !important;
 		justify-content: center !important;
 	}
-	.slick-slide {
-		display: flex !important;
-		justify-content: center !important;
-		width: 215px !important;
-		opacity: 0;
-		transition: all 0.5s ease-in-out;
-		img {
-			opacity: 0.1;
-		}
-	}
-	.slick-active {
-		opacity: 1 !important;
-		transition: all 0.5s ease-in-out;
-		img {
-			opacity: 0.1 !important;
-			transition: all 0.5s ease-in-out;
-		}
-	}
-	.slick-center {
-		transition: all 0.5s ease-in-out;
-		img {
-			opacity: 1 !important;
-			z-index: 2;
-		}
-	}
-	.slick-next,
-	.slick-prev {
-		width: 87px;
-		height: 87px;
-		z-index: 1;
-		top: 50%;
-	}
-	.slick-next {
-		right: 70px;
-	}
-	.slick-prev {
-		left: 70px;
-	}
-	.slick-next:before,
-	.slick-next:before,
-	.slick-prev:before {
-		content: "";
-		display: block;
-		width: 87px;
-		height: 87px;
-		background: url(../images/dest/arrow.png) center no-repeat;
-	}
-	.slick-prev:before {
-		transform: rotate(180deg);
-	}
 }
 
-// ? FAQ
-.faq {
-	padding: 120px 0;
-	background: url(../images/dest/faq-bg.png) center no-repeat;
-	background-size: cover;
-	.accordion {
-		margin-top: 40px;
-		.panel {
-			background-color: #121212;
-			margin-bottom: 15px;
-			border-radius: 10px;
-			box-shadow: 1.813px 1.827px 37.15px 25.85px #000;
-			&__title {
-				background-color: #121212;
-				border-radius: 10px;
-				padding: 18px 0 18px 20px;
-				cursor: pointer;
-				display: flex;
-				align-items: center;
-				position: relative;
-				justify-content: space-between;
-				a {
-					font-size: 18px;
-					font-weight: 700;
-					color: $textcolor;
-					&:hover {
-						text-decoration: none;
-					}
-				}
-				&::after {
-					content: "";
-					min-width: 10px;
-					min-height: 10px;
-					display: inline-block;
-					margin-right: 18px;
-					display: inline-block;
-					background: url(../images/dest/open-faq.png) center no-repeat;
-					transition: all 0.3s ease-in-out;
-					background-size: cover;
-				}
-				&.in {
-					&::after {
-						transform: rotate(180deg);
-					}
-				}
-			}
-			&__collapse {
-				display: none;
-				padding: 18px;
-				padding-top: 0;
-				ul {
-					line-height: 21px;
-					list-style: none;
-					font-size: 15px;
-					list-style: square outside;
-					color: #2b8fe4;
-					padding-bottom: 20px;
-					li {
-						padding-left: 5px;
-						margin-bottom: 16px;
-					}
-					li:last-child {
-						margin-bottom: 0;
-					}
-				}
-				p {
-					text-align: left;
-					padding-top: 0;
-				}
-			}
-		}
-	}
-}
-/* FAQ END*/
 
-/* Footer */
+// ? Footer
 .footer {
-	padding: 60px 0;
+	padding-top: 20px;
+	padding-bottom: 40px;
 	&__wrap {
 		.row {
 			display: flex;
@@ -979,7 +1044,7 @@ a {
 	}
 }
 
-/* Popup */
+//? Modal
 .bg__modal {
 	background-color: rgba(0, 0, 0, 0.4);
 	top: 0;
@@ -1023,7 +1088,7 @@ a {
 	}
 }
 #politic,
-#personal,
+#personal__popup,
 .more {
 	overflow-y: scroll;
 	.modals {
@@ -1038,7 +1103,8 @@ a {
 		font-weight: 700;
 	}
 }
-#popup_form, #popup_form2 {
+#popup_form,
+#popup_form2 {
 	.form {
 		background-image: none;
 	}
@@ -1157,6 +1223,11 @@ a {
 
 	.form {
 		padding-bottom: 80px;
+		.form__wrapper .form__image {
+			img {
+				width: 100%;
+			}
+		}
 		&__author {
 			width: 500px;
 		}
@@ -1235,12 +1306,49 @@ a {
 			}
 		}
 	}
+	.education {
+		.slider__item {
+			height: 500px;
+		}
+		img {
+			height: 100%;
+		}
+	}
+	.stat {
+		&__author {
+			margin-top: 30px;
+			max-width: 500px;
+			img {
+				width: 100%;
+			}
+		}
+	}
 	.heading {
 		&__title {
 			font-size: 35px;
 		}
 		&__subtitle {
 			font-size: 20px;
+		}
+	}
+	.stat {
+		&__content {
+			margin: 0;
+		}
+		.container {
+			flex-direction: column-reverse;
+			.heading__title--left,
+			.heading__subtitle--left {
+				text-align: center;
+			}
+			.popup-gallery {
+				margin-top: 60px;
+				max-width: 520px;
+				justify-content: center;
+				.popup__prev {
+					margin: 10px;
+				}
+			}
 		}
 	}
 	.rate {
@@ -1253,18 +1361,19 @@ a {
 		}
 	}
 	.form {
-		padding-bottom: 500px;
+		padding-bottom: 0;
 		display: flex;
 		justify-content: center;
 		overflow: hidden;
+		&__wrapper {
+			flex-direction: column;
+			.form__image {
+				max-width: 700px;
+			}
+		}
 		&__content {
 			margin: 0 auto;
-			margin-top: 70px;
-		}
-		&__author {
-			left: 50%;
-			transform: translateX(-50%);
-			bottom: -20%;
+			margin-top: 30px;
 		}
 	}
 	.modals {
@@ -1417,6 +1526,18 @@ a {
 			font-size: 18px;
 		}
 	}
+	.education {
+		padding-bottom: 60px;
+		.slick-dots {
+			 bottom: -50px;
+		 }
+		.slider__item {
+			height: 420px;
+		}
+		img {
+			height: 100%;
+		}
+	}
 	.benefits {
 		padding: 40px;
 		&__content {
@@ -1428,6 +1549,7 @@ a {
 			margin: 30px 0;
 		}
 		padding: 40px 0;
+		padding-bottom: 0;
 		.heading {
 			&__subtitle {
 				font-size: 30px;
@@ -1472,10 +1594,6 @@ a {
 	}
 	.form {
 		padding-top: 40px;
-		padding-bottom: 460px;
-		&__author {
-			bottom: -20%;
-		}
 	}
 	.footer {
 		padding-bottom: 0;
@@ -1568,7 +1686,14 @@ a {
 			left: 50%;
 		}
 	}
-
+	.education {
+		.slider__item {
+			height: 300px;
+		}
+		img {
+			height: 100%;
+		}
+	}
 	.problem__content {
 		margin-left: 0;
 	}
@@ -1600,15 +1725,22 @@ a {
 			font-weight: 400;
 		}
 	}
+	.stat {
+		&__author {
+			max-width: 400px;
+		}
+	}
+	.reviews {
+		padding-bottom: 20px;
+	}
+	.rate {
+		padding-top: 20px;
+	}
 	.form {
+		padding-top: 0;
 		background: url(../images/dest/form-bg-m.png) center 50px no-repeat;
 		background-size: cover;
 		overflow: hidden;
-		padding-bottom: 500px;
-		&__author {
-			width: 480px;
-			bottom: -15%;
-		}
 	}
 
 	.modals {
@@ -1722,6 +1854,7 @@ a {
 			}
 		}
 	}
+
 	.now {
 		padding-bottom: 310px;
 		&__content {
@@ -1740,6 +1873,17 @@ a {
 			bottom: -5%;
 		}
 	}
+	.education {
+		&__slider {
+			margin-top: 20px;
+		}
+		.slider__item {
+			height: 180px;
+		}
+		img {
+			height: 100%;
+		}
+	}
 	.benefits {
 		background: url(../images/dest/now2-bg-m.jpg) center no-repeat;
 		background-size: cover;
@@ -1755,6 +1899,23 @@ a {
 			text-align: center;
 			font-size: 14px;
 			font-weight: 700;
+		}
+	}
+	.stat {
+		.container {
+			.popup-gallery {
+				margin-top: 30px;
+				justify-content: center;
+				.popup__prev {
+					margin: 10px;
+					img {
+						width: 130px;
+					}
+				}
+			}
+		}
+		&__author {
+			max-width: 280px;
 		}
 	}
 	.rate {
@@ -1783,6 +1944,7 @@ a {
 		display: none !important;
 	}
 	.faq {
+		padding-top: 0;
 		.accordion {
 			.panel {
 				.panel__title a {
@@ -1797,12 +1959,12 @@ a {
 		}
 	}
 	.form {
-		padding-bottom: 320px;
 		.container {
 			padding: 0;
 		}
 		&__content {
 			padding: 18px;
+			margin-top: 30px;
 		}
 		&__wrap {
 			padding: 40px 20px;
@@ -1828,10 +1990,6 @@ a {
 		}
 		&__btn {
 			padding: 15px;
-		}
-		&__author {
-			bottom: -12%;
-			width: 300px;
 		}
 		.select__content {
 			top: 35px;
@@ -1870,5 +2028,8 @@ a {
 	}
 	.footer__wrap .requisites ul li {
 		font-size: 12px;
+	}
+	.footer__wrap .footer__block {
+		margin-bottom: 20px;
 	}
 }
