--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -160,6 +160,7 @@ a {
 		position: absolute;
 		top: 0;
 		left: 0;
+		display: none;
 	}
 	&__btn {
 		display: block;
@@ -172,8 +173,8 @@ a {
 	}
 	&__author {
 		position: absolute;
-		top: -230px;
-		left: -390px;
+		top: -175px;
+		left: -310px;
 	}
 	&__text {
 		font-size: 14px;
@@ -181,6 +182,7 @@ a {
 		position: absolute;
 		top: -48px;
 		left: 35px;
+		display: none;
 		&::before {
 			content: "";
 			display: block;
@@ -1099,8 +1101,8 @@ a {
 .more {
 	overflow-y: scroll;
 	.modals {
-		top: 0;
-		transform: translateX(-50%);
+		// top: 0;
+		// transform: translateX(-50%);
 		p {
 			font-size: 14px;
 		}
@@ -1205,7 +1207,7 @@ a {
 			font-size: 30px;
 		}
 		.play__author {
-			top: -145px;
+			top: -103px;
 			left: -450px;
 			img {
 				max-width: 700px;
@@ -1274,7 +1276,7 @@ a {
 				bottom: 0;
 				&__author {
 					top: -392px;
-					left: -251px;
+					left: -360px;
 					img {
 						max-width: 650px;
 					}
@@ -1666,7 +1668,7 @@ a {
 			}
 			.play__author {
 				z-index: 1;
-				top: 40px !important;
+				top: 130px !important;
 				left: -40px !important;
 				img {
 					max-width: 600px !important;
@@ -1820,7 +1822,7 @@ a {
 	.main {
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
 		background-size: cover;
-		padding-bottom: 340px !important;
+		padding-bottom: 400px !important;
 		padding-top: 45px;
 		&__content {
 			.play {
@@ -1896,7 +1898,7 @@ a {
 			margin-top: 20px;
 		}
 		.slider__item {
-			height: 180px;
+			height: 234px;
 		}
 		img {
 			height: 100%;
