--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -84,8 +84,8 @@ a {
 .main {
 	background: url(../images/dest/main-bg.jpg) center no-repeat;
 	background-size: cover;
-	padding-top: 170px;
-	padding-bottom: 120px;
+	padding-top: 100px;
+	padding-bottom: 65px;
 	overflow: hidden;
 	.container {
 		max-width: 1240px;
@@ -123,7 +123,49 @@ a {
 .included {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 40px;
+	flex-wrap: wrap;
+	&__block {
+		margin-top: 15px;
+		background-color: rgb(22, 22, 22);
+		border-radius: 20px;
+		padding: 15px;
+		&-margin {
+			span {
+				margin-left: 10px;
+			}
+		}
+		&-marginoff {
+			span {
+				margin:0 !important;
+			}
+		}
+		.content {
+			display: flex;
+			align-items: center;
+			border-radius: 15px;
+			border: 1px solid #6e5500;
+			padding: 20px;
+			span {
+				font-size: 40px;
+				line-height: 40px;
+				font-weight: 900;
+				color: $accent;
+				margin-right: 10px;
+			}
+			p {
+				display: flex;
+				align-items: center;
+				margin: 0;
+				font-weight: 700;
+			}
+			a {
+				display: flex;
+				align-items: center;
+				margin-right: 5px;
+				color: $accent;
+			}
+		}
+	}
 	&__list {
 		list-style: none;
 		padding: 0;
@@ -215,7 +257,7 @@ a {
 		box-shadow: $hover-shadow;
 	}
 	&--top {
-		margin-top: 60px;
+		margin-top: 40px;
 	}
 	&:hover {
 		text-decoration: none;
@@ -500,7 +542,8 @@ a {
 
 	&__content {
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
+		flex-wrap: wrap;
 		align-items: center;
 		margin-top: 65px;
 		margin-bottom: 60px;
@@ -511,8 +554,9 @@ a {
 		border-radius: 31px;
 		max-width: 360px;
 		width: 360px;
-		height: 550px;
+		height: 500px;
 		transition: all 0.2s;
+		margin: 20px;
 		.item__title {
 			text-align: center;
 		}
@@ -523,7 +567,7 @@ a {
 			flex-wrap: wrap;
 			position: absolute;
 			width: 100%;
-			bottom: 20px;
+			bottom: 25px;
 			left: 50%;
 			transform: translateX(-50%);
 			&--width {
@@ -602,7 +646,7 @@ a {
 			.rate__pay {
 				padding: 10px 40px;
 				width: auto;
-				margin-top: 10px;
+				margin-top: 20px;
 			}
 		}
 		&:hover {
@@ -632,16 +676,15 @@ a {
 		position: relative;
 		border: 1px solid #6e5500;
 		border-radius: 31px;
-		padding: 21px;
-		padding-top: 40px;
-		height: 507px;
+		padding: 25px;
+		height: 455px;
 	}
 
 	&__title {
 		color: $accent;
 		font-size: 21px;
 		font-weight: 900;
-		margin-bottom: 54px;
+		margin-bottom: 25px;
 		height: 60px;
 	}
 
@@ -1213,9 +1256,6 @@ a {
 				max-width: 700px;
 			}
 		}
-		.included {
-			flex-direction: column;
-		}
 	}
 	.now {
 		&__content {
@@ -1276,15 +1316,12 @@ a {
 				bottom: 0;
 				&__author {
 					top: -392px;
-					left: -360px;
+					left: -295px;
 					img {
 						max-width: 650px;
 					}
 				}
 			}
-		}
-		.included {
-			flex-direction: column;
 		}
 	}
 	.problem__list {
@@ -1486,12 +1523,29 @@ a {
 	.main {
 		padding-top: 100px;
 		position: relative;
+		.description__title::after {
+			margin-top: 10px;
+		}
+		.description__subtitle {
+			margin: 0;
+			margin-top: 10px;
+		}
 		&__content {
 			position: static;
+			.included {
+				margin-top: 470px;
+				justify-content: center;
+				&__wrap {
+					z-index: 1;
+				}
+			}
 			.play {
-				bottom: 27%;
-				left: 59%;
+				bottom: auto;
+				left: 50%;
+				top: 16%;
+				transform: translateX(-50%);
 				right: auto;
+				z-index: 0;
 				&__author {
 					top: 25px;
 					left: -25px;
@@ -1503,6 +1557,7 @@ a {
 		}
 	}
 	.btn--top {
+		margin: 0 auto;
 		margin-top: 20px;
 	}
 	.problem {
@@ -1652,19 +1707,20 @@ a {
 }
 @media (max-width: 768px) {
 	.main {
-		padding-bottom: 500px !important;
+		padding-bottom: 20px !important;
 		.main__content {
 			.description {
 				width: 100%;
+				.description__subtitle {
+					font-size: 28px;
+				}
 				.btn {
 					margin: 0 auto;
 					margin-top: 20px;
 				}
 			}
 			.play {
-				left: 50%;
-				right: auto;
-				transform: translateX(-50%);
+				top: 13%;
 			}
 			.play__author {
 				z-index: 1;
@@ -1822,10 +1878,10 @@ a {
 	.main {
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
 		background-size: cover;
-		padding-bottom: 400px !important;
 		padding-top: 45px;
 		&__content {
 			.play {
+				top: 16% !important;
 				&__wrapp {
 					width: 100px;
 					height: 100px;
@@ -1864,7 +1920,24 @@ a {
 			margin-top: 5px;
 		}
 		.included {
-			margin-top: 10px;
+			margin-top: 290px;
+			&__block {
+				.content {
+					p, a {
+						display: inline-block;
+					}
+					span {
+						font-size: 20px;
+						margin-right: 5px;
+						line-height: 20px;
+					}
+				}
+				&-margin {
+					span {
+						margin-left: 5px;
+					}
+				}
+			}
 			&__item {
 				font-size: 14px;
 			}
@@ -1898,7 +1971,7 @@ a {
 			margin-top: 20px;
 		}
 		.slider__item {
-			height: 234px;
+			height: 280px;
 		}
 		img {
 			height: 100%;
@@ -1940,18 +2013,17 @@ a {
 	}
 	.rate {
 		&__item {
-			height: 445px;
+			height: 400px;
 			margin: 20px 0;
-			padding: 10px;
+			padding: 20px;
 			.item__title {
 				font-size: 16px;
 				text-transform: uppercase;
 				height: 35px;
 			}
 			.item__wrapp {
-				padding: 10px;
-				padding-top: 15px;
-				height: 422px;
+				padding: 20px;
+				height: 360px;
 			}
 			.item__price .rate__pay {
 				padding: 10px 50px;
